platform/deploy/infra/threadforge-test/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: threadforge-test
  annotations:
    sidecar.istio.io/proxyImage: registry.threadforge.local:30500/istio/proxyv2@sha256:2f78ddd13cbf6f600c8bebb9f05b21f9b14e047ec5f8c88ef9f50abc8e14466b
  labels:
    istio-injection: enabled
